fix: add --sun-misc-unsafe-memory-access=allow to suppress Unsafe warnings